Omnibox UI Refresh: Fix placeholder text if no default search provider

During unit tests, or if the default search provider is disabled by
policy, there may not be any default search provider.

Previously, we would attempt to dereference a nullptr in that case, and
would intermittently crash. This CL fixes that by simply clearing the
placeholder text when there is no default search provider.

This is fine - as before Material Refresh there was no placeholder text
at all.

Bug: 852630
Change-Id: Id7933f7972de20a41252f8d4f0f7bb16ce623037
Reviewed-on: https://chromium-review.googlesource.com/1101710
Reviewed-by: Bret Sepulveda <bsep@chromium.org>
Commit-Queue: Tommy Li <tommycli@chromium.org>
Cr-Commit-Position: refs/heads/master@{#567709}
Former-commit-id: 4bbe66b05051f19733841c417a0bc7154d5bd8fd